fixed background not fitting when zooming in and out

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -8,18 +8,19 @@
 #container {
   position: absolute;
   width: 100%;
+  padding-top: 50px;
 }
 
 #transparent-background {
   background-image: url("../images/white-bronze.jpg");
-  background-repeat: repeat;
+  background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   opacity: 0.4;
+  margin-top: 55px;
   width: 100%;
   height: 100%;
-  position: absolute;
-}
-
-.navbar {
-  height: 8vh;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
