--- a/app/javascript/stylesheets/home.scss
+++ b/app/javascript/stylesheets/home.scss
@@ -31,9 +31,9 @@
   background-repeat: repeat;
   background-size: cover;
   opacity: 0.4;
-  height: 92vh;
+  height: 100%;
   width: 100%;
-  position: absolute;
+  position: fixed;
 }
 
 .map-view-container {
@@ -41,6 +41,6 @@
   width: 80%;
   position: relative;
   margin: auto;
-  padding-top: 8vh;
+  padding-top: 100px;
   // box-shadow: 0px 0px 44px 0px rgba(0,0,0,0.75);
 }
