--- a/app/javascript/stylesheets/posts.scss
+++ b/app/javascript/stylesheets/posts.scss
@@ -16,6 +16,7 @@
   height: 30rem;
   margin: auto;
   object-fit: cover;
+  padding: 10px;
 }
 
 #card-show-mb-3 {
